# ict_server

./: .gitignore  Cargo.toml  README.md  privacy.md
configs/: ict_server.toml  ict_server_sha1.toml
src/: ict_args.rs  ict_config.rs  ict_db.rs  ict_errors.rs  ict_operations.rs  ict_web.rs  ict_web_axum.rs  lib.rs  main.rs
tests/: E  db_tests.rs  ict_server.toml  operations_tests.rs  tests.sh
