[package]
name = "ict_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
