[package]
name = "ict_server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.36.0", features = ["bundled"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
rsa = { version = "0.9" }
rand = "0.8"
thiserror = "2.0.12"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"

#for the web server
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
